@@ -1,3 +1,8 @@
+2004-05-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclInterp.c (Tcl_LimitCheck, Tcl_LimitTypeReset): Reset
+	the limit-exceeded flag when removing a limit.
+
 2004-05-18  Miguel Sofer <msofer@users.sf.net>
 
 	* generic/tclExecute.c (TclExecuteByteCode): added comments to
